--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 35px;
+}
 .orange-color{
     color: goldenrod;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
@@ -32,16 +35,38 @@ section{
     background-repeat: no-repeat;
 
 }
-.dream-big{
-    width: 50%;
-    padding-left: 5%;
-}
-.my-image-two{
-    padding-left: 5%;
-    width: 80%;
-}
 .middle-banner{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item{
+    width: 50%;
+    box-shadow: 10px 16px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 7px;
+    
+}
+#web-dev-experience{
+    border-left: 5px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+#full-stack-experience{
+    border-left: 5px solid coral;
+    border-image: linear-gradient(salmon,tomato);
+    border-image-slice: 1;
+}
+
+.last-banner{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position:left
+}
+footer  p{
+    text-align: center;
 }
